Firebase DB models added and ES6 refactor

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
+    "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0"
   }
 }
