--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Sam Logan",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.5.0",
+    "babel-eslint": "7",
+    "eslint": "3.x",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
@@ -35,13 +36,13 @@
     "axios": "^0.14.0",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -55,6 +56,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "firebase": "^3.7.3",
+    "firebase-admin": "^5.9.0",
     "helmet": "^2.1.2",
     "json-loader": "^0.5.4",
     "method-override": "^2.3.5",
