--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "React-Redux-Firebase",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Universal React, Redux, Firebase boilerplate",
   "repository": "https://github.com/samlogan/React-Redux-Firebase",
   "main": "index.js",
@@ -16,70 +16,71 @@
   "author": "Sam Logan",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "7",
+    "babel-eslint": "^7.2.3",
     "eslint": "3.x",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "import-glob-loader": "^1.1.0",
     "nodemon": "^1.10.2",
     "null-loader": "^0.1.1",
     "react-addons-test-utils": "^15.4.1",
-    "react-transform-catch-errors": "^1.0.2",
-    "redux-mock-store": "1.1.2"
+    "react-transform-catch-errors": "^1.0.2"
   },
   "engines": {
     "node": "6.x||7.x||8.x||9.x"
   },
   "dependencies": {
-    "axios": "^0.14.0",
+    "axios": "^0.16.2",
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.2",
-    "cross-env": "^2.0.1",
-    "css-loader": "^0.26.1",
-    "express": "^4.13.4",
+    "body-parser": "^1.17.2",
+    "compression": "^1.7.0",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.4",
+    "express": "^4.15.4",
     "express-flash": "0.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.2",
     "firebase": "^3.7.3",
     "firebase-admin": "^5.9.0",
-    "helmet": "^2.1.2",
-    "json-loader": "^0.5.4",
-    "method-override": "^2.3.5",
+    "helmet": "^3.8.1",
+    "json-loader": "^0.5.7",
+    "method-override": "^2.3.9",
     "node-neat": "^1.7.2",
     "node-sass": "^4.3.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-helmet": "^3.2.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
-    "react-router-redux": "^4.0.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.1.2",
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.6.0",
+    "redux": "^3.7.2",
     "redux-form": "^6.6.0",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.2",
     "universal-style-loader": "^0.16.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.2",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
