--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "clean": "rimraf public/assets/app.js && rimraf public/assets/app.js.map && rimraf public/assets/*.ttf && rimraf public/assets/*.svg && rimraf public/assets/*.woff && rimraf compiled",
     "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build:dev": "cross-env NODE_ENV=development webpack ---debug --colors --display-error-details --config ./webpack/webpack.config.dev-server.js",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.prod.js"
+    "build:dev": "cross-env NODE_ENV=development npm run webpack -- --env.server",
+    "build": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && cross-env NODE_ENV=production npm run webpack -- --env.server",
+    "webpack": "webpack --colors --display-error-details --config ./webpack/webpack.config.js"
   },
   "author": "Sam Logan",
   "license": "MIT",
@@ -44,7 +45,6 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
@@ -61,15 +61,18 @@
     "method-override": "^2.3.9",
     "node-neat": "^1.7.2",
     "node-sass": "^4.3.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-reporter": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-config": "^1.0.0-beta.3",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-transform-hmr": "^1.0.4",
     "redux": "^3.7.2",
     "redux-form": "^6.6.0",
     "redux-logger": "^3.0.6",
@@ -81,6 +84,7 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.5.2",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-manifest-plugin": "^1.2.1"
   }
 }
