--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^1.10.2",
     "null-loader": "^0.1.1",
     "react-addons-test-utils": "^15.4.1",
-    "react-transform-catch-errors": "^1.0.2"
+    "react-transform-catch-errors": "^1.0.2",
+    "webpack-cli": "^2.0.10"
   },
   "engines": {
     "node": "6.x||7.x||8.x||9.x"
@@ -52,7 +53,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.4",
     "express-flash": "0.0.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^0.11.2",
     "firebase": "^3.7.3",
     "firebase-admin": "^5.9.0",
@@ -75,14 +76,14 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.1.1",
-    "sass-resources-loader": "^1.3.2",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.18.2",
     "universal-style-loader": "^0.16.3",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.2",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-manifest-plugin": "^1.2.1"
+    "webpack": "^4.1.0",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   }
 }
