--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "3.x",
+    "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -36,10 +36,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
@@ -47,34 +47,34 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "body-parser": "^1.17.2",
-    "compression": "^1.7.0",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
-    "express": "^4.15.4",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "express-flash": "0.0.2",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "firebase": "^3.7.3",
-    "firebase-admin": "^5.9.0",
-    "helmet": "^3.8.1",
+    "firebase": "^5.3.0",
+    "firebase-admin": "^5.13.1",
+    "helmet": "^3.13.0",
     "json-loader": "^0.5.7",
     "method-override": "^2.3.9",
     "node-neat": "^1.7.2",
     "node-sass": "^4.9.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
-    "react-router": "^4.1.2",
+    "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.3",
-    "react-router-dom": "^4.1.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-form": "^6.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.3.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
@@ -82,8 +82,8 @@
     "universal-style-loader": "^0.16.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.2",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-manifest-plugin": "^2.0.3"
   }
 }
