--- a/package.json
+++ b/package.json
@@ -17,26 +17,9 @@
   "author": "Sam Logan",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
-    "import-glob-loader": "^1.1.0",
-    "nodemon": "^1.18.3",
-    "null-loader": "^0.1.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-transform-catch-errors": "^1.0.2",
-    "webpack-cli": "^3.1.0"
-  },
-  "engines": {
-    "node": "6.x||7.x||8.x||9.x"
-  },
-  "dependencies": {
-    "axios": "^0.16.2",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -47,21 +30,45 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "import-glob-loader": "^1.1.0",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.9.2",
+    "nodemon": "^1.18.3",
+    "null-loader": "^0.1.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.18.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-manifest-plugin": "^2.0.3"
+  },
+  "engines": {
+    "node": "6.x||7.x||8.x||9.x"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "express-flash": "0.0.2",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "file-loader": "^1.1.11",
     "firebase": "^5.3.0",
     "firebase-admin": "^5.13.1",
     "helmet": "^3.13.0",
-    "json-loader": "^0.5.7",
     "method-override": "^2.3.9",
-    "node-neat": "^1.7.2",
-    "node-sass": "^4.9.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.1.3",
@@ -74,16 +81,6 @@
     "redux": "^3.7.2",
     "redux-form": "^6.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.7",
-    "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.18.2",
-    "universal-style-loader": "^0.16.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.2",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
-    "webpack-manifest-plugin": "^2.0.3"
+    "redux-thunk": "^2.3.0"
   }
 }
