Name updated in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Redux-Firebase",
+  "name": "Universal-Firebase-React",
   "version": "2.0.0",
   "description": "Universal React, Redux, Firebase boilerplate",
   "repository": "https://github.com/samlogan/React-Redux-Firebase",
