--- a/package.json
+++ b/package.json
@@ -49,10 +49,7 @@
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.18.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
     "webpack-manifest-plugin": "^2.0.3"
   },
   "engines": {
@@ -79,6 +76,9 @@
     "redux": "^3.7.2",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.16.2",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3"
   }
 }
