--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "import-glob-loader": "^1.1.0",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "null-loader": "^0.1.1",
