--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "firebase-admin": "^5.13.1",
     "helmet": "^3.13.0",
     "method-override": "^2.3.9",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-reporter": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.1.3",
