Replaced postcss-cssnext with postcss-preset-env

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "null-loader": "^0.1.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.0.10",
+    "postcss-reporter": "^6.0.0",
     "react-transform-catch-errors": "^1.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.7",
@@ -64,9 +67,6 @@
     "firebase-admin": "^5.13.1",
     "helmet": "^3.13.0",
     "method-override": "^2.3.9",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-reporter": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.1.3",
