--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.3.1",
     "import-glob-loader": "^1.1.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.3",
@@ -51,6 +52,7 @@
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.18.2",
+    "svg-url-loader": "^2.3.2",
     "url-loader": "^1.0.1",
     "webpack-cli": "^3.1.0",
     "webpack-manifest-plugin": "^2.0.3"
