--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.1",
     "import-glob-loader": "^1.1.0",
+    "jimp": "^0.5.3",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.2",
@@ -48,6 +49,7 @@
     "postcss-preset-env": "^6.0.10",
     "postcss-reporter": "^6.0.0",
     "react-transform-catch-errors": "^1.0.2",
+    "responsive-loader": "^1.1.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
